--- a/index.html
+++ b/index.html
@@ -59,7 +59,26 @@
 
 <div id="second">
     <div class="container">
-        <h1 class="col s8 offset-s2">Hello there</h1>
+        <div class="row">
+            <div class="input-field col s8 offset-s2">
+                <input id="user-text1" type="text" class="validate" style="text-transform: uppercase">
+                <label for="user-text1">Introduceti mesajul pe care doriti sa-l criptati</label>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="input-field col s8 offset-s2">
+                <input id="user-key" type="number" class="validate">
+                <label for="user-key">Introduceti cheia</label>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="input-field col s8 offset-s2">
+                <input disabled value="" id="disabled1" type="text" class="validate">
+                <label for="disabled">Mesajul criptat</label>
+            </div>
+        </div>
     </div>
 </div>
 
