--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 
 <body>
 <!-- NAV -->
-<div class="row nav">
-    <div class="container">
-        <a class="waves-effect waves-light btn-large col s2 offset-s2">Criptul lui Cesar</a>
-        <a class="waves-effect waves-light btn-large col s2">Al doilea algoritm</a>
-        <a class="waves-effect waves-light btn-large col s2">Criptul lui Vernam</a>
-        <a class="waves-effect waves-light btn-large col s2">Criptul lui Cesar</a>
+<div class="row nav" style="display: flex; justify-content: space-around;">
+    <div class="container col s12" style="display: flex; justify-content: space-around; max-width: 900px">
+        <a class="waves-effect waves-light btn-large">Criptul lui Cesar</a>
+        <a class="waves-effect waves-light btn-large">Al doilea algoritm</a>
+        <a class="waves-effect waves-light btn-large">Criptul lui Vernam</a>
+        <a class="waves-effect waves-light btn-large">Criptul lui Cesar</a>
     </div>
 </div>
 <!-- CESAR -->
