Fix UI second algorithm

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
     </div>
 </div>
-
+<!-- SECOND-->
 <div id="second">
     <div class="container">
         <div class="row">
@@ -69,7 +69,7 @@
         <div class="row">
             <div class="input-field col s8 offset-s2">
                 <input id="user-key" type="number" class="validate">
-                <label for="user-key">Introduceti cheia</label>
+                <label for="user-key" data-error="Lungimea cheiei nu trebuie sa depaseasca lungimea mesajului">Introduceti cheia</label>
             </div>
         </div>
 
@@ -81,7 +81,7 @@
         </div>
     </div>
 </div>
-
+<!-- VERNAM-->
 <div id="vernam">
     <div class="container">
         <div class="row">
